--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<script src="hit.js"></script>
+	    <script src="TweenMax.min.js"></script>
       <a href="#" class="c-logo">
         <svg width="85" height="35" xmlns="http://www.w3.org/2000/svg">
           <g fill="none" fill-rule="evenodd">
