--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css">
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
 <div class="resume">
