--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+</head>
+<body>
+
 
 <div class="resume">
    <div class="resume_left">
@@ -213,3 +219,5 @@
     </div>
   </div>
 </div>
+</body>
+</html>
