--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class="resume_content">
        <div class="resume_item resume_info">
          <div class="title">
-           <p class="bold">stephen colbert</p>
+           <p class="bold">Hiếu Lê</p>
            <p class="regular">Designer</p>
          </div>
          <ul>
@@ -24,7 +24,7 @@
                <i class="fas fa-map-signs"></i>
              </div>
              <div class="data">
-               21 Street, Texas <br /> USA
+               Praha <br /> Czech Republic
              </div>
            </li>
            <li>
