--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                <i class="fas fa-envelope"></i>
              </div>
              <div class="data">
-               stephen@gmail.com
+               lehieuit91@gmail.com
              </div>
            </li>
            <li>
@@ -48,7 +48,7 @@
                <i class="fab fa-weebly"></i>
              </div>
              <div class="data">
-               www.stephen.com
+               www.lehieuit.com
              </div>
            </li>
          </ul>
@@ -116,7 +116,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Facebook</p>
-               <p>Stephen@facebook</p>
+               <p>lehieuit@facebook</p>
              </div>
            </li>
            <li>
@@ -125,7 +125,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Twitter</p>
-               <p>Stephen@twitter</p>
+               <p>lehieuit@twitter</p>
              </div>
            </li>
            <li>
@@ -143,7 +143,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Linkedin</p>
-               <p>Stephen@linkedin</p>
+               <p>lehieuit@linkedin</p>
              </div>
            </li>
          </ul>
