--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                <i class="fab fa-weebly"></i>
              </div>
              <div class="data">
-               www.lehieuit.com
+               www.lehieuit.net
              </div>
            </li>
          </ul>
@@ -134,7 +134,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Youtube</p>
-               <p>Stephen@youtube</p>
+               <p>lehieuit@youtube</p>
              </div>
            </li>
            <li>
