--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="hieuit.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 <div class="profile-card">
 
     <div class="img-area">
