--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <div class="inner-area">
 
-            <img src="https://1.bp.blogspot.com/-G1sjYA4APAE/X6NcE7L37RI/AAAAAAAAB1Y/VhScfkl1tGMqBtTUuwRpLTFpinQrk0jYQCLcBGAsYHQ/s16000/images.png" alt="" />
+            <img src="https://lh3.googleusercontent.com/pw/ACtC-3do26hUKon5sFbrSOLYV-ym3H1aoTnTzgnSDoznooSGYf98hU_GWR3eM0QFpWnK3QXnCmTp0IpKQItxR5OGKOwV9h2e6jkEUbYapUo8gcpsFM2CJ7UmYCF0DuyRsOinfZJHRD7fOiO2Uv7UH9ZzmAOyzA=s625-no?authuser=0" alt="" />
 
         </div>
 
