--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div class="social-icons">
 
-        <a href="#" class="fb"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://fb.com/lehieuit" class="fb"><i class="fab fa-facebook-f"></i></a>
 
         <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
 
-        <a href="#" class="insta"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/lehieu.it" class="insta"><i class="fab fa-instagram"></i></a>
 
-        <a href="#" class="yt"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UC7sAjbKN7Xnik7K26qF8S_Q" class="yt"><i class="fab fa-youtube"></i></a>
 
     </div>
 
