--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://img.icons8.com/flat_round/344/hearts.png' rel='icon' type='image/x-icon'/>
 <link rel="stylesheet" href="hieuit.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
