--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://img.icons8.com/flat_round/344/hearts.png' rel='icon' type='image/x-icon'/>
 <link rel="stylesheet" href="hieuit.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+</head><body>    
 <div class="profile-card">
 
     <div class="img-area">
@@ -71,3 +74,5 @@
     </div>
 
 </div>
+</body> 
+</html>
