--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>I'm Hiếu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://img.icons8.com/flat_round/344/hearts.png' rel='icon' type='image/x-icon'/>
 <link rel="stylesheet" href="hieuit.css">
@@ -74,5 +75,8 @@
     </div>
 
 </div>
+    <audio autoplay>
+        <source src="https://raw.githubusercontent.com/lehieuit/hieucz/master/sao-cung-duoc-binz.mp3">
+    </audio>
 </body> 
 </html>
