--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
     <div class="buttons">
 
-        <button>Message</button>
+        <a href="#"><button>Message</button></a>
 
-        <button>Subscribe</button>
+        <a href="#"><button>Subscribe</button></a>
 
     </div>
 
