--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
     <div class="social-icons">
 
-        <a href="https://fb.com/lehieuit" class="fb"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://fb.com/lehieuit" class="fb" target="_blank"><i class="fab fa-facebook-f"></i></a>
 
-        <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="twitter" target="_blank"><i class="fab fa-twitter"></i></a>
 
-        <a href="https://www.instagram.com/lehieu.it" class="insta"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/lehieu.it" class="insta" target="_blank"><i class="fab fa-instagram"></i></a>
 
-        <a href="https://www.youtube.com/channel/UC7sAjbKN7Xnik7K26qF8S_Q" class="yt"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UC7sAjbKN7Xnik7K26qF8S_Q" class="yt" target="_blank"><i class="fab fa-youtube"></i></a>
 
     </div>
 
     <div class="buttons">
 
-        <a href="#"><button>Message</button></a>
+        <a href="https://www.messenger.com/t/lehieuit" target="_blank"><button>Message</button></a>
 
-        <a href="#"><button>Subscribe</button></a>
+        <a href="#" target="_blank"><button>Subscribe</button></a>
 
     </div>
 
