--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
     <div class="buttons">
 
-        <a href="https://www.messenger.com/t/lehieuit" target="_blank"><button>Message</button></a>
+        <a href="https://www.messenger.com/t/lehieuit" target="_blank"><button>Nhắn tin</button></a>
 
-        <a href="#" target="_blank"><button>Subscribe</button></a>
+        <a href="#" target="_blank"><button>Theo dõi</button></a>
 
     </div>
 
