--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="name">I'm Hiếu</div>
 
-    <div class="about">www.lehieuit.net</div>
+    <div class="about"><a href="https://lehieuit.net/" target="_blank">www.lehieuit.net</a></div>
 
     <div class="social-icons">
 
