--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
 </div>
-    <audio autoplay>
+    <audio autoplay loop>
         <source src="https://raw.githubusercontent.com/lehieuit/hieucz/master/sao-cung-duoc-binz.mp3">
     </audio>
 </body> 
